--- a/src/main/webapp/property/wechat.properties
+++ b/src/main/webapp/property/wechat.properties
@@ -9,7 +9,7 @@ wechat.secret=qsQ0GgapQNt_URRjkEklnXQKlSMRA5FA6U3WWsvNrqk
 wechat.corpId=ww59df2fdaef20da86
 wechat.contactSecret=f-QziGPCYVu7FOB1OhxGTX0fY7Xe1zKXfflR9Qpvgj0
 
-wechat.informUser=lv.zhong
+wechat.informUser=lv.zhong|lu.haiming|lin.lin
 wechat.informUser2=yang.huifang|gong.zhiping
 
 wechat.sales.agentId=1000004
